# story

./: .gitignore  Cargo.toml  ERA10_MANIFEST.md  Makefile  SECURITY.md  cognitive_operators.py  create_arkhe_onchain.py  create_arkhe_os.sh  distill_zkagi.py  docker-compose-bridge.yml  enterprise_mind.py  fpga_synthesis.py  go.mod  go.sum  gram_assurance_bridge_1028.py  hybrid_ecosystem_trainer.py  lattice_crypto.py  mesh_passport.py  network_optimization_1083_export.json  option_index_bridge.py  orchestrator.py  plastic_zkagi_v3.py  plastic_zkagi_v4.py  pr.json  sindy_v120_stls_discovery.json  substrato_1088.py  test_commit.go  test_commit.sh  test_commit.txt  test_pr.json  test_pr2.json  test_pr3.json  test_pr4.json  test_pr5.json  test_pr6.json  test_suite.py  test_verify.go  test_verify2.go  update_gitignore.sh  verify_zkAGI.py  (+3 more)
989y3-full-100t-orchestrator/: README.md  decree_989y3.md  full_100t_orchestrator.py  orchestrator_schema.yaml  requirements.txt
arkhe-cli/: Cargo.toml
arkhe-onchain/: Makefile  README.md
arkhe-onchain/bridge/arkhe-octra-bridge/: Cargo.toml
arkhe-onchain/bridge/arkhe-octra-bridge/src/: main.rs
arkhe-os/: Cargo.toml  Makefile  README.md
arkhe-substrato-1007-jules-training/: README.md
arkhe-substrato-1028-coreutils/: .gitignore  Cargo.toml  Makefile  README_Catedral_Coreutils.md  build_catedral_coreutils.sh  catedral_fs_kernel_1028.2.c
arkhe-substrato-1066-fordefi-bridge/: README.md  decree_1066.md  fordefi_bridge.py  test_fordefi_bridge.py
arkhe-substrato-1066.1-fordefi-bridge-orchestrator/: LICENSE  Makefile  README.md  (+2 more)
(+232 files in other folders)
