[workspace]
members = ["arkhe-cli"]
[package]
name = "arkhe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
aws-sdk-sagemaker = "1.0"
aes-gcm = "0.10"
tokio = { version = "1.0", features = ["full"] }
